--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -16,10 +16,16 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".admin.AdminDashboardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".arranger.ArrangerDashboardActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoginOptionsActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".member.MainActivity"
             android:exported="false" />
         <activity
             android:name=".SplashScreen"
